# rust-demo

./: .gitignore  Cargo.toml  README.md  hello
src/: array.rs  conditional.rs  conditionals.rs  controlflow.rs  enum.rs  loops.rs  main.rs  number.rs  numbers.rs  option.rs  schools.rs  string.rs  strings.rs  struct.rs  structs.rs  trait.rs  traits.rs  tuple.rs  tuples.rs  user.rs  vector.rs
