[package]
name = "demo-rust"
version = "0.1.0"
authors = ["nattatorn.yuch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "array"
path = "./src/array.rs"

[[example]]
name = "conditional"
path = "./src/conditional.rs"

[[example]]
name = "controlflow"
path = "./src/controlflow.rs"

[[example]]
name = "enum"
path = "./src/enum.rs"

[[example]]
name = "number"
path = "./src/number.rs"

[[example]]
name = "string"
path = "./src/string.rs"

[[example]]
name = "struct"
path = "./src/struct.rs"

[[example]]
name = "trait"
path = "./src/trait.rs"

[[example]]
name = "tuple"
path = "./src/tuple.rs"

[[example]]
name = "vector"
path = "./src/vector.rs"